# python-package-rpmbuild

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
etc/: manager.py  uwsgi.ini
matrix/: __init__.py
matrix/api/: __init__.py  app.py
matrix/cmd/: api.py  matrixcli.py
matrix/myutils/: __init__.py  somePython.py
rpmbuild/SOURCES/: matrix-api-uwsgi.service  matrix-api.service
rpmbuild/SPECS/: matrix.spec
