[metadata]
name = matrix
version = 1.0.0
description-file = README.md
author = zhouyihe
author-email = zhouyihe0308@gmail.com
classifier =
    Intended Audience :: Information Technology
    License :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    matrix
extra_files =
    requirements.txt

[entry_points]
console_scripts =
    matrix-api = matrix.cmd.api:main
    matrix-cli = matrix.cmd.matrixcli:main